change for publish

--- a/YOP/appsettings.json
+++ b/YOP/appsettings.json
@@ -11,7 +11,7 @@
   },
   "TokenOptions": {
     "JwtSecretKey": "superSecretKey@345",
-    "Issuer": "https://localhost:44377",
+    "Issuer": "https://yop20201107134518.azurewebsites.net/",
     "Audience": "http://localhost:4200",
     "Lifetime": 30
   },
