--- a/YOP/appsettings.json
+++ b/YOP/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "SqlServerConnection": {
-    "ConnectionString": "Data Source=your-own-podcast.database.windows.net;Initial Catalog=YOP;Persist Security Info=True;User ID=Andrey;Password=Redstar645"
+    "ConnectionString": "Data Source=yop.database.windows.net;Initial Catalog=yop;Persist Security Info=True;User ID=Andrii;Password=Andrey645"
   },
   "TokenOptions": {
     "JwtSecretKey": "superSecretKey@345",
